DZ_16 наконец-то

--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -5,7 +5,7 @@
     <title>Результаты поиска</title>
 </head>
 <body>
-    <a href="/forma/">Назад к форме поиска</a>
+    <a href="/form/">Назад к форме поиска</a>
     <hr>
     <h3>Параметры</h3>
     <ol>
