--- a/templates/index.html
+++ b/templates/index.html
@@ -13,14 +13,8 @@
         <li>
             <a href="/">Главная</a>
         </li>
-<!--        <li>-->
-<!--            <a href="/contacts/">Контакты</a>-->
-<!--        </li>-->
         <li>
-            <a href="/result/">Результат поиска</a>
-        </li>
-        <li>
-            <a href="/forma/">Страница формы поиска</a>
+            <a href="/form/">Страница формы поиска</a>
         </li>
     </ul>
     <h2>
@@ -28,7 +22,7 @@
     </h2>
     <p>Парсер умеет получать вакансии с hh<br>и анализировать</p>
     <p>Можно задавать различные параметры поиска</p>
-    <a href="/forma/">Начать поиск</a>
+    <a href="/form/">Начать поиск</a>
 
 </body>
 </html>
